feat: set up firebase authentification
create basic signup component, auth guard and service

--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "angular-app:build:production",
+            "firebaseProject": "chatter-app-33613",
+            "firebaseHostingSite": "chatter-app-33613"
+          }
         }
       }
     }
