--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.1.3",
     "firebase": "^9.17.1",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
