--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.3",
-    "@angular/common": "^15.1.3",
-    "@angular/compiler": "^15.1.3",
-    "@angular/core": "^15.1.3",
-    "@angular/fire": "^7.5.0",
-    "@angular/forms": "^15.1.3",
-    "@angular/platform-browser": "^15.1.3",
-    "@angular/platform-browser-dynamic": "^15.1.3",
-    "@angular/router": "^15.1.3",
-    "firebase": "^9.17.1",
-    "rxjs": "~7.5.0",
+    "@angular/animations": "^17.3.5",
+    "@angular/common": "^17.3.5",
+    "@angular/compiler": "^17.3.5",
+    "@angular/core": "^17.3.5",
+    "@angular/fire": "^17.0.1",
+    "@angular/forms": "^17.3.5",
+    "@angular/platform-browser": "^17.3.5",
+    "@angular/platform-browser-dynamic": "^17.3.5",
+    "@angular/router": "^17.3.5",
+    "firebase": "^10.11.0",
+    "rxjs": "^7.8.1",
     "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.4",
-    "@angular/cli": "~15.1.4",
-    "@angular/compiler-cli": "^15.1.3",
-    "@types/jasmine": "~4.0.0",
-    "@types/uuid": "^8.3.4",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "@angular-devkit/build-angular": "^17.3.5",
+    "@angular/cli": "~17.3.5",
+    "@angular/compiler-cli": "^17.3.5",
+    "@types/jasmine": "^5.1.4",
+    "@types/uuid": "^9.0.8",
+    "jasmine-core": "^5.1.2",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "^4.9.5"
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "typescript": "^5.4.5"
   }
 }
