--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.5",
+    "@angular/animations": "^19.2.2",
+    "@angular/cdk": "^19.2.3",
     "@angular/common": "^19.2.2",
     "@angular/compiler": "^19.0.5",
     "@angular/core": "^19.2.2",
     "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.0.5",
+    "@angular/material": "^19.2.3",
     "@angular/platform-browser": "^19.0.5",
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
@@ -28,7 +30,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "~19.0.6",
+    "@angular/cli": "~19.2.3",
     "@angular/compiler-cli": "^19.0.5",
     "@types/jasmine": "^5.1.4",
     "@types/uuid": "^9.0.8",
@@ -38,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "prettier": "^3.5.3",
     "typescript": "5.6.3"
   }
 }
