--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^19.0.5",
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
+    "@stomp/rx-stomp": "^2.0.1",
     "firebase": "^10.11.0",
     "rxjs": "^7.8.1",
     "socket.io-client": "^4.6.1",
