--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.2",
-    "@angular/cdk": "^19.2.3",
-    "@angular/common": "^19.2.2",
-    "@angular/compiler": "^19.0.5",
-    "@angular/core": "^19.2.2",
-    "@angular/fire": "^19.0.0",
-    "@angular/forms": "^19.0.5",
-    "@angular/material": "^19.2.3",
-    "@angular/platform-browser": "^19.0.5",
-    "@angular/platform-browser-dynamic": "^19.0.5",
-    "@angular/router": "^19.0.5",
+    "@angular/animations": "^20.0.0",
+    "@angular/cdk": "^20.0.1",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/fire": "^20.0.0-rc.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.1",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/router": "^20.0.0",
     "@stomp/rx-stomp": "^2.0.1",
     "firebase": "^10.11.0",
     "rxjs": "^7.8.1",
@@ -30,9 +30,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "~19.2.3",
-    "@angular/compiler-cli": "^19.0.5",
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "^5.1.4",
     "@types/uuid": "^9.0.8",
     "jasmine-core": "^5.1.2",
@@ -42,6 +42,6 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "^3.5.3",
-    "typescript": "5.6.3"
+    "typescript": "5.8.3"
   }
 }
